fix: ScrollView not scrollable, buttons overlapping

--- a/app.json
+++ b/app.json
@@ -21,7 +21,8 @@
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "softwareKeyboardLayoutMode": "resize"  // or use "pan" depending on preference
     },
     "web": {
       "favicon": "./assets/favicon.png"
