--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@react-native-community/datetimepicker": "8.4.4",
     "dayjs": "^1.11.18",
     "expo": "~54.0.10",
+    "expo-file-system": "~19.0.15",
     "expo-router": "~6.0.8",
+    "expo-sharing": "~14.0.7",
     "expo-sqlite": "~16.0.8",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
