--- a/package.json
+++ b/package.json
@@ -17,14 +17,17 @@
     "expo-sharing": "~14.0.7",
     "expo-sqlite": "~16.0.8",
     "expo-status-bar": "~3.0.8",
+    "expo-updates": "~29.0.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "react-native-web": "^0.21.0"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
+    "eas-cli": "^16.19.3",
     "typescript": "~5.9.2"
   },
   "private": true
