--- a/app.json
+++ b/app.json
@@ -9,42 +9,55 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "newArchEnabled": true,
-    "platforms": ["android","ios","web"],
+    "platforms": [
+      "android",
+      "ios",
+      "web"
+    ],
     "splash": {
-      "image": "./assets/splash-icon.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "image": "./assets/logo.png",
+      "backgroundColor": "#fffaf3",
+      "resizeMode": "contain"
     },
     "ios": {
       "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "foregroundImage": "./assets/logo.png",
+        "backgroundColor": "#fffaf3"
       },
-      "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false,
-      "softwareKeyboardLayoutMode": "resize"
+      "package": "com.psitsha.overtimetrackerrn"
     },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    },
+    "edgeToEdgeEnabled": true,
+    "predictiveBackGestureEnabled": false,
+    "softwareKeyboardLayoutMode": "resize",
     "plugins": [
-      "expo-router",
-      "expo-sqlite"
+      "expo-asset"
     ],
     "extra": {
-      "router": {},
       "eas": {
         "projectId": "687d137e-6d46-43d1-826e-6ed2ab80aebb"
       }
-    },
-    "runtimeVersion": {
-      "policy": "appVersion"
-    },
-    "updates": {
-      "url": "https://u.expo.dev/687d137e-6d46-43d1-826e-6ed2ab80aebb"
     }
+  },
+  "web": {
+    "favicon": "./assets/favicon.png"
+  },
+  "plugins": [
+    "expo-router",
+    "expo-sqlite"
+  ],
+  "extra": {
+    "router": {},
+    "eas": {
+      "projectId": "687d137e-6d46-43d1-826e-6ed2ab80aebb"
+    }
+  },
+  "runtimeVersion": {
+    "policy": "appVersion"
+  },
+  "updates": {
+    "url": "https://u.expo.dev/687d137e-6d46-43d1-826e-6ed2ab80aebb"
   }
 }
