--- a/eas.json
+++ b/eas.json
@@ -1,21 +1,26 @@
 {
-  "cli": {
-    "version": ">= 16.19.3",
-    "appVersionSource": "remote"
-  },
+  "cli": { "version": ">= 16.0.0" },
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "channel": "development",
+      "android": { "buildType": "apk" }
     },
     "preview": {
-      "distribution": "internal"
+      "distribution": "internal",
+      "channel": "preview",
+      "android": { "buildType": "apk" }
     },
     "production": {
-      "autoIncrement": true
+      "distribution": "store",
+      "channel": "production",
+      "android": { "gradleCommand": ":app:bundleRelease" }
     }
   },
   "submit": {
-    "production": {}
+    "production": {
+      "ios": { "appleId": "<your-apple-id@email>" }
+    }
   }
 }
