--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "dayjs": "^1.11.18",
     "expo": "~54.0.13",
     "expo-asset": "~12.0.9",
+    "expo-constants": "~18.0.9",
     "expo-dev-client": "~6.0.15",
     "expo-file-system": "~19.0.17",
+    "expo-linking": "~8.0.8",
     "expo-print": "~15.0.7",
     "expo-router": "~6.0.12",
     "expo-sharing": "~14.0.7",
@@ -31,7 +33,6 @@
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
-    "eas-cli": "^16.19.3",
     "typescript": "~5.9.2"
   },
   "private": true
